--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "ds",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "src",
   "projectType": "library",
